Ajustando função de calcular perimetro com flatmap e reduce , retornando uma lista imutavel do tipo double